public/styles.css
body {
    font-family: Georgia, 'Times New Roman', Times, serif
}

header {
    background-color: black;
    color: gold;
    text-align: center;
}

#fireDiv {
    background-image: url("/images/fire Photo.jpg");
    background-size: cover;
    background-position: center;
    padding: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 300px; /* Optional minimum height */
    height: auto;
    position: relative;
}

#iceDiv {
    background-image: url("/images/Black Ice Photo.jpg");
    background-size: cover;
    background-position: center;
    padding: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 300px; /* Optional minimum height */
    height: auto;
    position: relative;
}

#characterDiv {
    background-color: black;
    background-size: cover;
    background-position: center;
    padding: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 300px; /* Optional minimum height */
    height: auto;
    position: relative;
}

#introTextBox {
    background-color: goldenrod;
    width: 45%;
    max-height: 80%;
    overflow-y: auto;
    padding: 20px;
    text-align: center;
    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
}

#characterScreen {
    background-color: goldenrod;
    width: 45%;
    max-height: 80%;
    overflow-y: auto;
    padding: 20px;
    text-align: center;
    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
}

#userInputScreen {
    background-color: goldenrod;
    width: 45%;
    max-height: 80%;
    overflow-y: auto;
    padding: 20px;
    text-align: center;
    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
}

.charButton {
    background-color: black;
    color: white;
}

#userFact input[type="text"] {
    width: 80%; /* or any other value like 100%, 300px, etc. */
    padding: 8px;
    font-size: 1rem;
}

.characterInfo {
    text-align: left;
}

.custom-navbar {
    background-color: goldenrod;
    color: black; 
}

.custom-navbar .navbar-nav .nav-link {
    color: black; 
}

/*MAKE SURE WORKS ON DIFFERENT SCREEN SIZES.  NEED TO DO THINGS LIKE SHRINKING TEXT FOR SMALLER SCREENS*/

